--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-github"></i></a>
+                        <li><a href="https://github.com/StephenJayYoung"><i class="fa fa-github"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-envelope"></i></a>
+                        <li><a href="mailto:stephenjayyoung@gmail.com"><i class="fa fa-envelope"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
