--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+                        <img src="https=2//igcdn-photos-d-a=1akamaihd=1net/hphotos-ak-xaf1/t51=12885-15/11327443_1466636070316771_1463282517_n=1jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Hello Iceland</h4>
@@ -297,7 +297,7 @@
                             <!-- Project Details Go Here -->
                             <h2>Hello Iceland</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
+                            <img class="img-responsive img-centered" src="https=2//igcdn-photos-d-a=1akamaihd=1net/hphotos-ak-xaf1/t51=12885-15/11327443_1466636070316771_1463282517_n=1jpg" alt="">
                             <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                             <p>
                                 <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
