--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https=2//igcdn-photos-d-a=1akamaihd=1net/hphotos-ak-xaf1/t51=12885-15/11327443_1466636070316771_1463282517_n=1jpg" class="img-responsive" alt="">
+                        <img src="img/IMG_0436.JPG" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Hello Iceland</h4>
@@ -115,7 +115,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
+                        <img src="img/TheJbac.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>The Jbac</h4>
@@ -129,7 +129,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/IsabellaYoga.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Isabella Yoga</h4>
@@ -143,7 +143,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
+                        <img src="img/IsabellaYoga.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>City Hacker</h4>
