--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Hello Iceland</h4>
-                        <p class="text-muted">A website documents the Young Boyz adventure to Iceland</p>
+                        <p class="text-muted">A website documenting the Young Boyz adventure to Iceland</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -143,7 +143,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/IsabellaYoga.jpg" class="img-responsive" alt="">
+                        <img src="img/CityHacker.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>City Hacker</h4>
@@ -157,7 +157,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/escape.png" class="img-responsive" alt="">
+                        <img src="img/PMFG.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Pettygrove MFG (under construction)</h4>
