--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/IMG_0436.JPG" alt="">
+                        <img src="img/Iceland.JPG" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Hello Iceland</h4>
-                        <p class="text-muted">A website documenting the Young Boyz adventure to Iceland</p>
+                        <p class="text-muted">A website documenting an Icelandic adventure</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -129,7 +129,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/IsabellaYoga.jpg" class="img-responsive" alt="">
+                        <img src="img/IsabellaYoga1.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Isabella Yoga</h4>
@@ -157,7 +157,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/PMFG.jpg" class="img-responsive" alt="">
+                        <img src="img/MtHood.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Pettygrove MFG (under construction)</h4>
