--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-<!--                     <h3 class="section-subheading text-muted">I like to build things that make people's lives better.</h3>
-                </div> -->
+                    <h3 class="section-subheading text-muted">I like to build things that make people's lives better.</h3>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -105,7 +105,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Hello Iceland</h4>
-                        <p class="text-muted">A website documenting an Icelandic adventure</p>
+                        <p class="text-muted">Website documenting an Icelandic adventure</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
