--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                         <img src="img/MtHood.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Pettygrove MFG (under construction)</h4>
-                        <p class="text-muted">Website for Pettygrove Manufacturing</p>
+                        <h4>Pettygrove MFG</h4>
+                        <p class="text-muted">Website for Pettygrove Manufacturing (under construction)</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -171,7 +171,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/dreams.png" class="img-responsive" alt="">
+                        <img src="img/TacoPic.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Lunch Finder</h4>
