--- a/index.html
+++ b/index.html
@@ -296,16 +296,12 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Hello Iceland</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="https=2//igcdn-photos-d-a=1akamaihd=1net/hphotos-ak-xaf1/t51=12885-15/11327443_1466636070316771_1463282517_n=1jpg" alt="">
-                            <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                            <p class="item-intro text-muted"></p>
+                            <img class="img-responsive img-centered" src="img/Iceland.JPG" alt="">
+                            <p>This website uses the Jekyll template "Grid Gallery," with two additional pages. The first page, entitled "Stories," utilizes modified code from a Bootstrap template, and the second page, entitled "#YoungBoyzInIceland" utilizes the Instagram API to display all of the photos on instagram that use the hashtag #YoungBoyzInIceland. </p>
                             <p>
-                                <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
-<!--                             <ul class="list-inline">
-                                <li>Date: July 2014</li>
-                                <li>Client: Round Icons</li>
-                                <li>Category: Graphic Design</li>
-                            </ul> -->
+                                <strong>Check out the website here: <a href="http://stephenjayyoung.github.io/Iceland"> http://stephenjayyoung.github.io/Iceland
+                            </p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
