finished the bulk of the portfolio descriptions

--- a/index.html
+++ b/index.html
@@ -378,10 +378,11 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>City Hacker</h2>
-                            <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
-                            <p>This web based application uses Bootstrap, Node, Express, Knex, Postgres, Heroku, and Ember  </p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
+                            <h2><a href="http://cityhacker.herokuapp.com/">City Hacker</a></h2>
+                            <a href="http://cityhacker.herokuapp.com/">
+                            <img class="img-responsive img-centered" src="img/CityHacker.jpg" alt=""></a>
+                            <p>This web based application uses Bootstrap, Node, Express, Knex, Postgres, Heroku and Ember</p>
+                            <p>Check it out here:<a href="http://cityhacker.herokuapp.com/"> www.GetCityHacker.com</a></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -404,11 +405,11 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/escape-preview.png" alt="">
-                            <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
+                            <h2><a href="http://www.pettygrovemfg.com/">Pettygrove Manufacturing</a></h2>
+                            <a href="http://www.pettygrovemfg.com/">
+                            <img class="img-responsive img-centered" src="img/PMFG.jpg" alt=""></a>
+                            <p>This is a simple website that utilizes a Bootstrap template and design work. </p>
+                            <p>Check it out here:<a href="http://www.pettygrovemfg.com/"> www.Pettygrovemfg.com</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -431,11 +432,11 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
-                            <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
+                            <h2><a href="http://youngcreativespace.com/FourSquare-Lunchfinder/">Lunch Finder</a></h2>
+                            <a href="http://youngcreativespace.com/FourSquare-Lunchfinder/">
+                            <img class="img-responsive img-centered" src="img/TacoPic.jpg" alt=""></a>
+                            <p>This web based application uses Javascript and the FourSquare API to display the top rated lunch spots close to your current location.</p>
+                            <p>Check it out here:<a href="http://youngcreativespace.com/FourSquare-Lunchfinder/"> www.youngcreativespace.com/FourSquare-Lunchfinder/</a></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
