some minor text edits

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                             <p class="item-intro text-muted"></p>
                             <a href="http://stephenjayyoung.github.io/Iceland">
                             <img class="img-responsive img-centered" src="img/Iceland.JPG" alt=""></a>
-                            <p>This website uses the Jekyll template "Grid Gallery," with two additional pages. The first page, entitled "Stories," utilizes modified code from a Bootstrap template, and the second page, entitled "#YoungBoyzInIceland" utilizes the Instagram API to display all of the photos on instagram that use the hashtag #YoungBoyzInIceland. </p>
+                            <p>This website uses the Jekyll template "Grid Gallery," with two additional pages. The first page, entitled "Stories," utilizes modified code from a Bootstrap template, and the second page, entitled "#YoungBoyzInIceland," utilizes the Instagram API to display all of the photos on Instagram that use the hashtag #YoungBoyzInIceland.</p>
                             <p>
                                 <strong>Check out the website here: <a href="http://stephenjayyoung.github.io/Iceland"> http://stephenjayyoung.github.io/Iceland</a>
                             </p>
@@ -328,7 +328,7 @@
                             <a href="http://thejbac.com/">
                             <img class="img-responsive img-centered" src="img/TheJbac.jpg" alt=""></a>
                             <p>This website was built from scratch, and utilizes Bootstrap, the Instagram API, the Twitter API, The Tumblr API, and the Google calendar. </p>
-                            <p>Check it out here: <a href="http://thejbac.com/">www.thejbac.com</a ></p>
+                            <p>Check it out here: <a href="http://thejbac.com/">www.thejbac.com</a></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -409,7 +409,7 @@
                             <a href="http://www.pettygrovemfg.com/">
                             <img class="img-responsive img-centered" src="img/PMFG.jpg" alt=""></a>
                             <p>This is a simple website that utilizes a Bootstrap template and design work. </p>
-                            <p>Check it out here:<a href="http://www.pettygrovemfg.com/"> www.Pettygrovemfg.com</a>.</p>
+                            <p>Check it out here:<a href="http://www.pettygrovemfg.com/"> www.Pettygrovemfg.com</a></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
