--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">I like to build things that make people's lives better.</h3>
+<!--                     <h3 class="section-subheading text-muted">I like to build things that make people's lives better.</h3> -->
                 </div>
             </div>
             <div class="row">
@@ -118,7 +118,7 @@
                         <img src="img/TheJbac.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>The Jbac</h4>
+                        <h4>the Jbac</h4>
                         <p class="text-muted">Website for the Jacuzzi Boys Athletic Club</p>
                     </div>
                 </div>
@@ -183,12 +183,37 @@
     </section>
 
     <!-- About Section -->
-    <section id="about">
+<!--     <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
                     <h3 class="section-subheading text-muted">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</h3>
+                </div>
+            </div>
+        </div>
+    </section> -->
+
+        <!-- About Section 2-->
+    <section class="success" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>About</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>I've been coding <a href="https://github.com/StephenJayYoung">Every.Single.Day</a> for the last year, and I haven't gotten sick of it yet. I got my start at Portland Code School (link), and since then, I've taken a number of classes, read nerdy books, worked on projects for various clients, and taught students the ways of JavaScript and other languages, tools, and frameworks. This stuff is fun, and using it in a way that helps people makes it even funner. </p>
+                </div>
+                <div class="col-lg-4">
+                    <p> I like to make things that help people. My mission as a developer (and as a person) is to help build meaningful communities - so that the people involved in them can be more fulfilled, productive and happier. Check out my resume below to see some of the projects I've been working on.
+                    </p>
+                </div>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a href="#" class="btn btn-lg btn-outline">
+                        <i class="fa fa-download"></i> Download Theme
+                    </a>
                 </div>
             </div>
         </div>
@@ -217,7 +242,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
             <div class="row">
@@ -268,7 +293,7 @@
                         </li>
                         <li><a href="mailto:stephenjayyoung@gmail.com"><i class="fa fa-envelope"></i></a>
                         </li>
-                        <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://www.linkedin.com/profile/view?id=117252392&trk=hp-identity-name"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
