minor changes to css

--- a/index.html
+++ b/index.html
@@ -187,12 +187,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h1>About</h1>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p><b> My Coding Roots: </b>I've been coding <a href="https://github.com/StephenJayYoung">Every.Single.Day</a> for the last year, and I haven't even come close to getting sick of it. I got my start at <a href="http://www.portlandcodeschool.com/">Portland Code School</a>, and since then, I've taken a number of classes, read nerdy books, worked on projects for various clients, and taught students the ways of JavaScript and other languages, tools and frameworks. </p>
+                    <p><b> My Coding Roots: </b>I coded <a href="https://github.com/StephenJayYoung">Every.Single.Day</a> for the last year, and since then have been creating a new website every two weeks -- and I haven't even come close to getting sick of it. I got my start at <a href="http://www.portlandcodeschool.com/">Portland Code School</a>, and since then, I've taken a number of classes, read nerdy books, worked on projects for various clients, and taught students the ways of JavaScript and other languages, tools and frameworks. </p>
                 </div>
                 <div class="col-lg-4">
                     <p><b>My Mission: </b>My goal as a developer (and as a person) is to help build meaningful communities - so that the people involved in them can feel more fulfilled, be more productive, and become happier human beings. Check out my resume below to get a feel for how I've gone about doing this, or click on the links above to view some of the projects I've been working on!
@@ -229,7 +229,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading"><a href="#">About</a>Contact Me</h2>
+                    <h2 class="section-heading"><a href="#"></a>Contact Me</h2>
                     <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
