minor text changes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Stephen Jay Young</div>
-                <div class="intro-heading"><em>Developer</em></div>
+                <div class="intro-heading"><em>Web Developer</em></div>
             </div>
         </div>
     </header>
