--- a/index.html
+++ b/index.html
@@ -213,15 +213,43 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Resume</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                   <!--  <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                <div class="col-lg-4 text-center">
+                    <p class="large text-muted"><b>Technical Skills</b></p>
+                    <p>HTML, CSS, JavaScript, Node, JQuery, SASS, AJAX, Gulp, Ember, Express, SQL, Bootstrap, Git, Backbone, API manipulation and Heroku.</p> 
+                </div>
+                <div class="col-lg-4 text-center">
+                    <p class="large text-muted"><b>Education</b></p>
+                    <p><b>Portland Code School</b>
+                    <br>
+                    <p>Full Stack Javascript (August-December 2014) Advanced Front End Development (July 2014)<p>
+                    <p><b>Saint Joseph's University</b></p>
+                    <p>Masters in International Marketing (September-May 2010)</p>
+                    <p>Bachelor of Science in Business Administration (September 2005-May 2009)<p>
+                    <p><em>Marketing Major, concentration in English studies</em></p> 
+                </div>
+                <div class="col-lg-4 text-center">
+                    <p class="large text-muted"><b>Experience</b></p>
+                    <p><b>Portland Code School (August 2014-Present)</b>
+                    <p>Full stack JavaScript TA</p>
+                    <ul>
+                      <li>Bullet 1</li>
+                      <li>Bullet 2</li>
+                      <li>Bullet 3</li>
+                    </ul>
+                    <p><b>Young Creative Space</b>
+                    <p>Freelance Web Development (December 2014-August 2015)</p>
+                    <ul>
+                      <li>Created websites and applications from the ground up.</li>
+                      <li>Manipulated API’s to display functionality from various social media sites. </li>
+                      <li>Communicated with clients to assure that projects met expectations and were completed in a timely manner.</li>
+                      <li>Engaged in continued education in order to sharpen current skills and to continue to learn.</li>
+                    </ul>
                 </div>
             </div>
-        </div>
     </section>
     
     <!-- Contact Section -->
