--- a/index.html
+++ b/index.html
@@ -190,12 +190,13 @@
                     <h1>About</h1>
                 </div>
             </div>
+            <br>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p><b> My Coding Roots: </b>I coded <a href="https://github.com/StephenJayYoung">Every.Single.Day</a> for the last year, and since then have been creating a new website every two weeks -- and I haven't even come close to getting sick of it. I got my start at <a href="http://www.portlandcodeschool.com/">Portland Code School</a>, and since then, I've taken a number of classes, read nerdy books, worked on projects for various clients, and taught students the ways of JavaScript and other languages, tools and frameworks. </p>
+                    <p class="lead"><b> My Coding Roots: </b>I coded <a href="https://github.com/StephenJayYoung">Every.Single.Day</a> for the last year, and since then have been creating a new website every two weeks -- and I haven't even come close to getting sick of it. I got my start at <a href="http://www.portlandcodeschool.com/">Portland Code School</a>, and since then, I've taken a number of classes, read nerdy books, worked on projects for various clients, and taught students the ways of JavaScript and other languages, tools and frameworks. </p>
                 </div>
                 <div class="col-lg-4">
-                    <p><b>My Mission: </b>My goal as a developer (and as a person) is to help build meaningful communities - so that the people involved in them can feel more fulfilled, be more productive, and become happier human beings. Check out my resume below to get a feel for how I've gone about doing this, or click on the links above to view some of the projects I've been working on!
+                    <p class = "lead"><b>My Mission: </b>My goal as a developer (and as a person) is to help build meaningful communities - so that the people involved in them can feel more fulfilled, be more productive, and become happier human beings. Check out my resume below to get a feel for how I've gone about doing this, or click on the links above to view some of the projects I've been working on!
                     </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -216,31 +217,30 @@
                    <!--  <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 text-center">
-                    <p class="large text-muted"><b>Technical Skills</b></p>
+            <div class="row"> <id="resumeStuff">
+  <!--               <div class="col-lg-4 text-left TechnicalSkills">
+                    <p class="large text-muted text-left"><b>Technical Skills</b></p>
                     <p>HTML, CSS, JavaScript, Node, JQuery, SASS, AJAX, Gulp, Ember, Express, SQL, Bootstrap, Git, Backbone, API manipulation and Heroku.</p> 
-                </div>
-                <div class="col-lg-4 text-center">
-                    <p class="large text-muted"><b>Education</b></p>
-                    <p><b>Portland Code School</b>
-                    <br>
+                </div> -->
+                <div class="col-lg-6 text-left Education">
+                    <h4><b>Education</b></h4>
+                    <p><b><u>Portland Code School</u></b>
                     <p>Full Stack Javascript (August-December 2014) Advanced Front End Development (July 2014)<p>
-                    <p><b>Saint Joseph's University</b></p>
+                    <p><b><u>Saint Joseph's University</u></b></p>
                     <p>Masters in International Marketing (September-May 2010)</p>
                     <p>Bachelor of Science in Business Administration (September 2005-May 2009)<p>
                     <p><em>Marketing Major, concentration in English studies</em></p> 
                 </div>
-                <div class="col-lg-4 text-center">
-                    <p class="large text-muted"><b>Experience</b></p>
-                    <p><b>Portland Code School (August 2014-Present)</b>
+                <div class="col-lg-6 text-left Experience">
+                    <h4><b>Experience</b></h4>
+                    <p><b><u>Portland Code School (August 2014-Present)</u></b>
                     <p>Full stack JavaScript TA</p>
                     <ul>
-                      <li>Bullet 1</li>
-                      <li>Bullet 2</li>
-                      <li>Bullet 3</li>
+                      <li>Assisted new students  </li>
+                      <li>Helped to develop lesson plans</li>
+                      <li>Collaborated with teaching staff to ensure that </li>
                     </ul>
-                    <p><b>Young Creative Space</b>
+                    <p><b><u>Young Creative Space</u></b>
                     <p>Freelance Web Development (December 2014-August 2015)</p>
                     <ul>
                       <li>Created websites and applications from the ground up.</li>
