fixed the text issues on projects modals

--- a/index.html
+++ b/index.html
@@ -341,8 +341,7 @@
                             <a href="http://stephenjayyoung.github.io/Iceland">
                             <img class="img-responsive img-centered" src="img/Iceland.JPG" alt=""></a>
                             <p>This website uses the Jekyll template "Grid Gallery," with two additional pages. The first page, entitled "Stories," utilizes modified code from a Bootstrap template, and the second page, entitled "#YoungBoyzInIceland," utilizes the Instagram API to display all of the photos on Instagram that use the hashtag #YoungBoyzInIceland.</p>
-                            <p>
-                                <strong>Check out the website here: <a href="http://stephenjayyoung.github.io/Iceland"> http://stephenjayyoung.github.io/Iceland</a>
+                            <p><b>Check it out here: <a href="http://stephenjayyoung.github.io/Iceland"> http://stephenjayyoung.github.io/Iceland</b></a>
                             </p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
@@ -368,8 +367,8 @@
                             <h2><a href="http://thejbac.com/">the Jbac</h2>
                             <a href="http://thejbac.com/">
                             <img class="img-responsive img-centered" src="img/TheJbac.jpg" alt=""></a>
-                            <p>This website was built from scratch, and utilizes Bootstrap, the Instagram API, the Twitter API, The Tumblr API, and the Google calendar. </p>
-                            <p>Check it out here: <a href="http://thejbac.com/">www.thejbac.com</a></p>
+                            <p class ="strong">This website was built from scratch, and utilizes Bootstrap, the Instagram API, the Twitter API, The Tumblr API, and the Google calendar. </p>
+                            <p><b>Check it out here: <a href="http://thejbac.com/">www.thejbac.com</a></b></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -396,7 +395,7 @@
                             <a href="http://isabellayoga.com/">
                             <img class="img-responsive img-centered" src="img/IsabellaYoga1.jpg" alt=""></a>
                             <p>This website uses a Bootstrap template, a Bootstrap calendar, and the Instagram API.</p>
-                            <p>Check it out here:<a href="http://isabellayoga.com/"> www.IsabellaYoga.com</a></p>
+                            <p><b>Check it out here:<a href="http://isabellayoga.com/"> www.IsabellaYoga.com</a></b></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -423,7 +422,7 @@
                             <a href="http://cityhacker.herokuapp.com/">
                             <img class="img-responsive img-centered" src="img/CityHacker.jpg" alt=""></a>
                             <p>This web based application uses Bootstrap, Node, Express, Knex, Postgres, Heroku and Ember</p>
-                            <p>Check it out here:<a href="http://cityhacker.herokuapp.com/"> www.GetCityHacker.com</a></p>
+                            <p><b>Check it out here:<a href="http://cityhacker.herokuapp.com/"> www.GetCityHacker.com</a></b></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -450,7 +449,7 @@
                             <a href="http://www.pettygrovemfg.com/">
                             <img class="img-responsive img-centered" src="img/PMFG.jpg" alt=""></a>
                             <p>This is a simple website that utilizes a Bootstrap template and design work. </p>
-                            <p>Check it out here:<a href="http://www.pettygrovemfg.com/"> www.Pettygrovemfg.com</a></p>
+                            <p><b>Check it out here:<a href="http://www.pettygrovemfg.com/"> www.Pettygrovemfg.com</b></a></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
@@ -477,7 +476,7 @@
                             <a href="http://youngcreativespace.com/FourSquare-Lunchfinder/">
                             <img class="img-responsive img-centered" src="img/TacoPic.jpg" alt=""></a>
                             <p>This web based application uses Javascript and the FourSquare API to display the top rated lunch spots close to your current location.</p>
-                            <p>Check it out here:<a href="http://youngcreativespace.com/FourSquare-Lunchfinder/"> www.youngcreativespace.com/FourSquare-Lunchfinder/</a></p>
+                            <p><b>Check it out here:<a href="http://youngcreativespace.com/FourSquare-Lunchfinder/"> www.youngcreativespace.com/FourSquare-Lunchfinder/</b></a></p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
